Do not use Java 9 API
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>